--- a/App/JocysCom.WebScreenSaver.csproj
+++ b/App/JocysCom.WebScreenSaver.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>JocysCom.WebScreenSaver</RootNamespace>
     <AssemblyName>JocysCom.WebScreenSaver</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
@@ -25,6 +25,7 @@
     <WarningLevel>4</WarningLevel>
     <RunCodeAnalysis>true</RunCodeAnalysis>
     <LangVersion>6</LangVersion>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -34,6 +35,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationIcon>app.ico</ApplicationIcon>
@@ -59,7 +61,6 @@
     <Compile Include="Common\SettingsManager.cs" />
     <Compile Include="Common\WebItem.cs" />
     <Compile Include="JocysCom\Common\Helper.cs" />
-    <Compile Include="JocysCom\Common\TraceFormat.cs" />
     <Compile Include="JocysCom\ComponentModel\BindingListInvoked.cs" />
     <Compile Include="JocysCom\ComponentModel\PropertyComparer.cs" />
     <Compile Include="JocysCom\ComponentModel\SortableBindingList.cs" />
@@ -108,10 +109,12 @@
     <Compile Include="JocysCom\Processes\TestUnion.cs" />
     <Compile Include="JocysCom\Processes\TOUCHINPUT.cs" />
     <Compile Include="JocysCom\Runtime\ChangeState.cs" />
-    <Compile Include="JocysCom\Runtime\Helper.cs" />
+    <Compile Include="JocysCom\Runtime\RuntimeHelper.cs" />
     <Compile Include="JocysCom\Runtime\Serializer.cs" />
+    <Compile Include="JocysCom\Runtime\TraceFormat.cs" />
     <Compile Include="JocysCom\Security\HashHelper.cs" />
     <Compile Include="JocysCom\Security\MD5Helper.cs" />
+    <Compile Include="JocysCom\Security\SHA256Helper.cs" />
     <Compile Include="JocysCom\Win32\ICONINFO.cs" />
     <Compile Include="JocysCom\Win32\POINT.cs" />
     <Compile Include="ScreenSaverForm.cs">
